fixed slider on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -3512,11 +3512,6 @@ body.no-scroll {
         margin-top: 40px
     }
 
-    .article__overflow {
-        padding-left: 20px;
-        padding-right: 20px
-    }
-
     .article__slideWidth-img {
         height: 280px
     }
